# hs-py

./: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  Makefile  README.md  pyproject.toml  ruff.toml
.github/workflows/: ci.yml  release.yml
benchmarks/: Dockerfile.client  Dockerfile.server  Dockerfile.ws_bench  aggregate_results.py  bench_auth.py  bench_http.py  bench_profile_client.py  bench_profile_server.py  bench_server.py  bench_ws.py  bench_ws_compression.py  docker-compose.ws-bench.yml  docker-compose.yml  run_benchmarks.sh
benchmarks/data/Alpha/: alpha.json  alpha.trio
benchmarks/data/Bravo/: bravo.json  bravo.trio  bravo.zinc
docker/: docker-compose.yml  gen_tls_certs.py
docs/: conf.py  features.rst  getting-started.rst  index.rst
docs/api/: core.rst  encoding.rst  filter.rst  ontology.rst  security.rst  storage.rst  types.rst  websocket.rst
docs/guide/: auth-users-permissions.rst  benchmarks.rst  client-guide.rst  data-types.rst  encoding-guide.rst  error-handling.rst  filter-guide.rst  observability.rst  ontology-guide.rst  server-guide.rst  storage-guide.rst  tls-guide.rst  watch-guide.rst  websocket-guide.rst
examples/: client_basics.py  encoding_formats.py  filter_eval.py  grid_building.py  ontology_demo.py  server_memory.py  tls_mtls.py  websocket_client.py
scripts/: exercise.py  stress.py  ws_stress.py
src/hs_py/: __init__.py  __main__.py  _scram_core.py  auth.py  auth_types.py  bootstrap.py  client.py  content_negotiation.py  convert.py  errors.py  fastapi_server.py  grid.py  kinds.py  metrics.py  ops.py  redis_ops.py  tls.py  user.py  watch.py  ws.py  ws_client.py  ws_codec.py  ws_server.py
src/hs_py/encoding/: __init__.py  csv.py  json.py  scanner.py  trio.py  zinc.py
src/hs_py/filter/: __init__.py  ast.py  eval.py  lexer.py  parser.py
src/hs_py/ontology/: __init__.py  defs.py  namespace.py  normalize.py  rdf.py  reflect.py  taxonomy.py
src/hs_py/storage/: __init__.py  memory.py  protocol.py  redis.py  timescale.py
tests/: conftest.py  test_auth.py  test_client.py  test_client_coverage.py  test_content_negotiation.py  test_convert.py  test_csv_encoding.py  test_e2e_docker.py  test_e2e_fastapi.py  test_encoding_coverage.py  test_encoding_filter_coverage.py  test_errors.py  test_fastapi_coverage.py  test_filter.py  test_grid.py  test_json_encoding.py  test_json_limits.py  test_kinds.py  test_lazy_imports.py  test_metrics.py  test_ontology.py  test_ops_coverage.py  test_rdf_coverage.py  test_rdf_export.py  test_redis_ops.py  test_redis_tls.py  test_reflect.py  test_role_edge.py  test_scanner_coverage.py  test_scram_core.py  test_server.py  test_smoke.py  test_storage_memory.py  test_storage_timescale.py  test_taxonomy.py  test_tls.py  test_trio.py  test_users.py  test_watch.py  test_ws.py  (+4 more)
